Made overall colors slightly darker, fixed several color and layout issues for new show page

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -7,7 +7,7 @@ $red: #b33834;
 $orange: #e89930;
 $body-bg: #1f2326;
 $primary: var(--primary);
-$bg-dark: #353b3f;
+$bg-dark: #2e3337;
 $bg-darker: var(--bg-darker);
 $text-color: var(--text-color);
 $text-color-light: var(--text-color-light);
