--- a/app/assets/stylesheets/elements/_buttons.scss
+++ b/app/assets/stylesheets/elements/_buttons.scss
@@ -47,7 +47,7 @@
 
   &--secondary {
     color: $white;
-    background: $bg-dark;
+    background: darken($bg-dark, 5%);
   }
 
   &--dark {
