--- a/app/assets/stylesheets/elements/_card.scss
+++ b/app/assets/stylesheets/elements/_card.scss
@@ -69,7 +69,7 @@
   padding: $margin / 4;
   border: 0;
   border-radius: $border-radius;
-  background: darken($bg-dark, 5%);
+  background: darken($bg-dark, 3.5%);
   text-align: left;
   color: $white;
   text-decoration: none;
