--- a/app/assets/stylesheets/elements/_comment.scss
+++ b/app/assets/stylesheets/elements/_comment.scss
@@ -25,7 +25,7 @@
   .post-comment {
     margin-top: $margin / 2;
     padding-left: $margin / 4;
-    border-left: 1px solid $body-bg;
+    border-left: 1px solid lighten($border-color, 5%);
 
     @include media-min(sm) {
       padding-left: $margin / 2;
