--- a/app/assets/stylesheets/elements/_revision.scss
+++ b/app/assets/stylesheets/elements/_revision.scss
@@ -1,9 +1,16 @@
-.revision .item {
+.item--revision {
+  grid-template: "title" "code";
   margin-bottom: 0;
+  border: 0;
+
+  @include media-min(sm) {
+    grid-template: "title code";
+    grid-template-columns: auto $code-width;
+  }
 }
 
 .revision__description {
-  border: 1px solid $border-color;
+  border: 1px solid lighten($border-color, 5%);
   padding: $margin / 4;
 
   @include media-min(lg) {
